log
Thu 13 Apr 2023 03:56:11 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a453bd8
Thu 13 Apr 2023 04:04:07 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:5: error: expected expression before ‘{’ token
   46 |     {
      |     ^
hashmap.c:51:1: error: expected expression before ‘}’ token
   51 | }
      | ^
Compilation failed
1104fe8
Thu 13 Apr 2023 04:09:37 PM UTC: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
eed6180
Thu 20 Apr 2023 05:41:57 PM UTC: 
 hashmap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:84:16: error: comparison between pointer and integer [-Werror]
   84 |     if(Buscado == map->buckets[i])
      |                ^~
hashmap.c:86:7: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
   86 |       mapa->current = Buscado;
      |       ^~~~
      |       map
hashmap.c:86:7: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:87:14: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Werror=int-conversion]
   87 |       return Buscado;
      |              ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
708e594
Thu 20 Apr 2023 05:42:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:84:16: error: comparison between pointer and integer [-Werror]
   84 |     if(Buscado == map->buckets[i])
      |                ^~
hashmap.c:87:14: error: returning ‘long int’ from a function with return type ‘Pair *’ makes pointer from integer without a cast [-Werror=int-conversion]
   87 |       return Buscado;
      |              ^~~~~~~
hashmap.c:91:10: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
   91 |       if(mapa->buckets[i] == NULL)
      |          ^~~~
      |          map
hashmap.c:91:10: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
72d1213
Thu 20 Apr 2023 05:46:41 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:84:16: error: comparison between pointer and integer [-Werror]
   84 |     if(Buscado == map->buckets[i])
      |                ^~
hashmap.c:91:10: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
   91 |       if(mapa->buckets[i] == NULL)
      |          ^~~~
      |          map
hashmap.c:91:10: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
27b6693
Thu 20 Apr 2023 05:46:57 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:84:16: error: comparison between pointer and integer [-Werror]
   84 |     if(Buscado == map->buckets[i])
      |                ^~
cc1: all warnings being treated as errors
Compilation failed
4ef811b
